syntax = "proto2";

package abi_dump;

message FunctionDecl {
  // Fully Qualified Name.
  required string function_name = 1 [default = "NONE"];

  // Mangled name.
  required string mangled_function_name = 2 [default = "NONE"];

  required string source_file = 3;
  required string parent_name = 4 [default = "NONE"];
  repeated string template_arguments = 5 ;
  repeated FieldDecl parameters = 6;
  required string return_type = 7 [default = "VOID"];
}

message FieldDecl {
  required string field_name = 1 [default = "NONE"];
  required string field_type = 2 [default = "VOID"];
}

message RecordDecl {
  repeated FieldDecl fields = 2;
  repeated string inner_classes = 3;
  repeated string base_classes = 4;
  required string fully_qualified_name = 5 [default = "NONE"];
  required int64 id = 6 [default = 0];
  required string entity_type = 7 [default = "NONE"];
  required string source_file = 9;
}

message TranslationUnit {
  repeated RecordDecl classes = 1;
  repeated FunctionDecl functions = 2;
}
